Ajustes para el proxy inverso